# modeltools

./: .gitignore  Pipfile  README.md  setup.cfg  setup.py
modeltools/: awstools.py  evaluationtools.py
modeltools/tests/: test_trainingtools.py
src/modeltools/: awstools.py  evaluationtools.py  testingtools.py  trainingtools.py
src/tests/: test_testingtools.py  test_trainingtools.py
tests/: test_trainingtools.py
