[metadata]
name = modeltools
version = 0.0.1
author = Jeremy Miller
author_email = jeremy.miller@clarivate.com
description = Common modeling tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/...
project_urls =
    Bug Tracker = https://github.com/...
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.7

[options.packages.find]
where = src